[tool.poetry]
name = "fast-hough-transform"
version = "0.1.0"
description = "An implementation of fast Hough transform"
authors = ["KirillPal <kazus.fail@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KIrillPal/FastHoughTransform"
repository = "https://github.com/KIrillPal/FastHoughTransform"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
argparse = "^1.4.0"
scipy = "^1.13.0"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
matplotlib = "^3.8.4"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
flake8-annotations = "^3.1.0"
flake8-docstrings = "^1.7.0"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.paths]
source = ["tests"]

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.coverage.report]
show_missing = true
